Revision history for {{$dist->name}}

{{$NEXT}}

2.005     2021-01-17 02:16:18+08:00 Asia/Kuala_Lumpur
    New features:

    - ->as_buffer can take low/high parameters similar to ->buffer, providing backpressure
    for buffer streams.

    Bugs fixed:

    - small amount of extra protection on Ryu::Observable->notify_all, which was
    previously passing an alias to the internal value (so the notifier callback
    was able to modify this directly). Now receives a copy.

    Documentation updates:

    - Mojo::Rx no longer exists, replaced with RxPerl references

2.004     2020-12-03 00:38:42+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - the `->from` method on a source was trying to call `blessed()` without importing
    it (thanks to KARJALA for raising this one)

2.003     2020-08-04 11:50:48+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - memory leak when using ->ordered_futures, due to accumulation of callbacks for
    cancelling pending requests (thanks to Nael Alolwani for reporting and providing
    a test case)

2.002     2020-06-27 23:53:40+08:00 Asia/Kuala_Lumpur
    No new features.

    Documentation updates:

    - mention RxPerl and Future::Buffer
    - clearer link to Ryu::Source, since it's not always obvious
    where the real code can be found...

2.001     2020-06-09 01:35:39+08:00 Asia/Kuala_Lumpur
    New features:

    - basic ->read_packed support in Ryu::Buffer

2.000     2020-06-09 00:37:33+08:00 Asia/Kuala_Lumpur
    New features:

    - Ryu::Buffer was previously an empty class, should now be doing something useful
    - ->as_queue to get a Future::Queue instance from a Ryu::Source
    - ->as_buffer to get a Ryu::Buffer instance from a Ryu::Source

    Deprecations:

    - Ryu::Exception ->future is no longer supported, should be ->as_future instead

    Since there's a deprecated feature, this is a major version release.

1.012     2020-03-22 13:35:42+08:00 Asia/Kuala_Lumpur
    New features:
