@@ -1,6 +1,14 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    New features:
+
+    - ->ordered_futures (->resolve) now also takes low/high parameters for backpressure
+
+    Bugs fixed:
+
+    - original source failure propagates after any pending Future instances are resolved,
+    thanks to Amin Marashi (Github issue #8)
 
 2.005     2021-01-17 02:16:18+08:00 Asia/Kuala_Lumpur
     New features:
